# redis-python-tutorial

./: .gitignore  Makefile  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: dependabot.yml
redis_python_tutorial/: __init__.py  client.py  data.py  logger.py  logging.py
redis_python_tutorial/data/: __init__.py  hash.py  list.py  set.py  string.py  zset.py
tests/: test_redis_python_tutorial.py
