[tool.poetry]
name = "redis-python-tutorial"
version = "0.1.0"
description = ""
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/hackersandslackers/redis-python-tutorial/"
documentation = "https://hackersandslackers.com/using-redis-python-applications/"
keywords = ["Redis",
            "Cache",
            "Queue",
            "Sessions",
            "NoSQL"]

[tool.poetry.dependencies]
python = "^3.7"
redis = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
init = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/python-poetry-tutorial/issues"
