[tool.poetry]
name = "redis_python_tutorial"
version = "0.1.0"
description = ""
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/redis-py-python/"
repository = "https://github.com/hackersandslackers/redis-python-tutorial/"
documentation = "https://hackersandslackers.com/redis-py-python/"
keywords = [
    "Redis",
    "Cache",
    "Queue",
    "Memory",
    "NoSQL"
]

[tool.poetry.dependencies]
python = "3.8"
redis = "*"
loguru = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/redis-python-tutorial/issues"
